add button to page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
  </head>
  <body>
     <h1>HTML Test</h1>
+
+    <p>Testing GitHub pages</p>
+    
+    <button>Click me</button>
  </body>
  </html>
